--- a/web.html
+++ b/web.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="css/web.css">
-	<title>model</title>
+	<title>开具发票</title>
 </head>
 
 <body>
@@ -35,18 +35,18 @@
 				<div class="InvoiceRise">
 					<span>发票抬头</span>
 					<p>
-						<input type="text" v-model="purchaserName" placeholder="请输入发票抬头" @keyup="searchRiseList">
+						<input type="text" v-model="name" placeholder="请输入发票抬头" @keyup="searchCompanyTitleList">
 						<i @click="dropDown"></i>
 					</p>
 					<div class="drop-down" v-if="dropDownShow">
-						<p v-for="(item,index) in searchList" :key="index" @click="chooseRise(index)" v-html="lineFeed(item)"></p>
+						<p v-for="(item,index) in searchList" :key="index" @click="chooseCompanyTitle(index)" v-html="lineFeed(item)"></p>
 					</div>
 					
 				</div>
 				<div class="DutyParagraph public-r">
 					<span>税号</span>
 					<p>
-						<input type="text" placeholder="请输入税号" v-model="purchaserTaxpayerNumber">
+						<input type="text" placeholder="请输入税号" v-model="taxNumber">
 					</p>
 				</div>
 				<div class="public-r">
@@ -64,7 +64,13 @@
 				<div class="public-r">
 					<span>开户行</span>
 					<p>
-						<input type="text" placeholder="请输入开户行" v-model="purchaserBank">
+						<input type="text" placeholder="请输入开户行" v-model="bank">
+					</p>
+				</div>
+				<div class="public-r">
+					<span>开户行账号</span>
+					<p>
+						<input type="text" placeholder="请输入开户行账号" v-model="bankAccount">
 					</p>
 				</div>
 			</div>
