--- a/demo.html
+++ b/demo.html
@@ -1,42 +1,44 @@
 <!doctype html>
 <html lang="zh" class="no-js">
 <head>
-<meta charset="UTF-8">
-<title>demo</title>
-<style>
-	.our-page{
-		position: fixed;
-		top:0;
-		left:0;
-		width:100%;
-		height:100%;
-		background:rgba(40,40,40,0.4);
-		display: none;
-	}
-	.our-page>iframe{
-		width:560px;
-		height: 700px;
-		position: absolute;
-		top:50%;
-		left:50%;
-		transform: translate(-50%,-50%);
-	}
-</style>
+  <meta charset="UTF-8">
+  <title>demo</title>
+  <style>
+    .our-page {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(40, 40, 40, 0.4);
+      display: none;
+    }
+
+    .our-page > iframe {
+      width: 560px;
+      height: 700px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  </style>
 </head>
 <body>
-	<div>
-		<button onclick="showModal()">点击开票</button>
-	</div>
-	<div class="our-page" id="our-page-modal">
-		<iframe src="web.html" frameborder="0"></iframe>
-	</div>
+<div>
+  <button onclick="showModal()">点击开票</button>
+</div>
+<div class="our-page" id="our-page-modal">
+  <iframe src="web.html" frameborder="0"></iframe>
+</div>
 </body>
 <script>
-	function closeInvoiceDialog(){
-		document.getElementById("our-page-modal").style.display="none";
-	}
-	function showModal(){
-		document.getElementById("our-page-modal").style.display="block";
-	}
+  function closeInvoiceDialog() {
+    document.getElementById("our-page-modal").style.display = "none";
+  }
+
+  function showModal() {
+    document.getElementById("our-page-modal").style.display = "block";
+  }
 </script>
 </html>
