--- a/demo.html
+++ b/demo.html
@@ -2,7 +2,7 @@
 <html lang="zh" class="no-js">
 <head>
   <meta charset="UTF-8">
-  <title>demo</title>
+  <title>示例</title>
   <style>
     .our-page {
       position: fixed;
@@ -16,7 +16,7 @@
 
     .our-page > iframe {
       width: 560px;
-      height: 700px;
+      height: 100%;
       position: absolute;
       top: 50%;
       left: 50%;
@@ -35,6 +35,8 @@
 <script>
   function closeInvoiceDialog() {
     document.getElementById("our-page-modal").style.display = "none";
+    //第3步，可调用 “获取开票用户默认抬头信息” API接口获取用户刚刚保存的开票信息
+    //TODO
   }
 
   function showModal() {
