--- a/mobile.html
+++ b/mobile.html
@@ -6,8 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/mobile.css">
-  <script src="https://cdn.jsdelivr.net/npm/vue"></script>
-  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <title>开具发票</title>
 </head>
 
@@ -41,7 +39,7 @@
       <div class="InvoiceRise">
         <span>发票抬头</span>
         <p>
-          <input type="text" v-model="name" placeholder="请输入发票抬头" @keyup="searchCompanyTitleList">
+          <input type="text" v-model="purchaserName" placeholder="请输入发票抬头" @keyup="searchCompanyTitleList">
           <i @click="dropDown"></i>
         </p>
         <div class="drop-down" v-if="dropDownShow">
@@ -63,11 +61,11 @@
       </div>
       <div class="public-r">
         <span>开户行</span>
-        <input type="text" placeholder="请输入开户行" v-model="bank">
+        <input type="text" placeholder="请输入开户行" v-model="purchaserBank">
       </div>
       <div class="public-r">
-        <span>开户行账号</span>
-        <input type="text" placeholder="请输入开户行账号" v-model="bankAccount">
+        <span>银行账号</span>
+        <input type="text" placeholder="请输入开户行账号" v-model="purchaserBankAccount">
       </div>
     </div>
     <div class="invoice-content">
@@ -97,7 +95,9 @@
     </p>
   </div>
 </div>
-<script src="js/web-order.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="js/order.js"></script>
 <script src="js/flexible.js"></script>
 </body>
 
