--- a/web.html
+++ b/web.html
@@ -98,8 +98,8 @@
     </p>
   </div>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/vue"></script>
-<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="https://cdn.bootcss.com/vue/2.6.10/vue.min.js"></script>
+<script src="https://cdn.bootcss.com/axios/0.19.0/axios.min.js"></script>
 <script src="js/order.js"></script>
 </body>
 
