fix:判断不能为空

--- a/demo.html
+++ b/demo.html
@@ -29,7 +29,9 @@
   <button onclick="showModal()">点击开票</button>
 </div>
 <div class="order-modal" id="fapiao-order-modal">
-  <iframe src="https://fapiao-order-modal.easyapi.com/web.html?taxNumber=91320211MA1WML8X6T&accessToken=79f2486841c6f9bc0521e0f162795d44&username=C4CA4238A0B923820DCC509A6F75849B" frameborder="0"></iframe>
+  <iframe
+    src="mobile.html?taxNumber=91320211MA1WML8X6T&accessToken=79f2486841c6f9bc0521e0f162795d44&username=C4CA4238A0B923820DCC509A6F75849B"
+    frameborder="0"></iframe>
 </div>
 </body>
 <script>
