--- a/mobile.html
+++ b/mobile.html
@@ -74,7 +74,6 @@
         <span>商品明细</span>
         <span style="visibility: hidden;">商品类别</span>
       </p>
-
     </div>
   </div>
   <div class="titleReceive">
@@ -91,7 +90,7 @@
       <input type="text" v-model="email" placeholder="请输入电子邮箱">
     </p>
     <p>
-      <a @click="saveAndUpload" href="closeInvoiceDialog">提交</a>
+      <a @click="saveAndUpload" id="submit" href="closeInvoiceDialog">提交</a>
     </p>
   </div>
 </div>
