--- a/web.html
+++ b/web.html
@@ -17,21 +17,27 @@
       <!-- <span>增值税专用发票</span> -->
     </p>
     <div class="tabChange">
-      <span>订单开票</span>
-      <div @click="tabChange(0)">
+      <span>抬头类型</span>
+      <div @click="tabChange('企业')">
         <p>
-          <span v-bind:class="{ selected:0==current}"></span>
+          <span v-bind:class="{ selected:'企业'==invoiceType}"></span>
         </p>
-        <span>单位</span>
+        <span>企业</span>
       </div>
-      <div @click="tabChange(1)">
+      <div @click="tabChange('个人')">
         <p>
-          <span v-bind:class="{ selected:1==current}"></span>
+          <span v-bind:class="{ selected:'个人'==invoiceType}"></span>
         </p>
-        <span>个人</span>
+        <span>个人/事业单位</span>
       </div>
     </div>
-    <div v-if="willShow">
+    <div v-if="invoiceType =='个人'">
+      <div class="public-r">
+        <span>发票抬头</span>
+        <p><input type="text" v-model="purchaserName" placeholder="请输入抬头"></p>
+      </div>
+    </div>
+    <div v-if="invoiceType =='企业'">
       <div class="InvoiceRise">
         <span>发票抬头</span>
         <p>
@@ -39,7 +45,7 @@
           <i @click="dropDown"></i>
         </p>
         <div class="drop-down" v-if="dropDownShow">
-          <p v-for="(item,index) in searchList" :key="index" @click="chooseCompanyTitle(index)"
+          <p v-for="(item,index) in companyList" :key="index" @click="chooseCompanyTitle(index)"
              v-html="lineFeed(item)"></p>
         </div>
 
